[gd_scene load_steps=5 format=2]

[ext_resource path="res://core/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/base/BaseLevel.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "gameover"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverBlack:rect_rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverBlack:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 135, 135 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOverWhite:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 135, 135 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameOverWhite:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "show"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Bottom:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ), Vector2( 0, 320 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bottom:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ), Vector2( 1280, 400 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Top:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Top:rect_size")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ), Vector2( 1280, 384 ) ]
}

[node name="BaseLevel" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 50

[node name="Top" type="ColorRect" parent="TransitionLayer"]
anchor_right = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="TransitionLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverBlack" type="ColorRect" parent="TransitionLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 5, 5 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverWhite" type="ColorRect" parent="TransitionLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 5, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionLayer"]
anims/gameover = SubResource( 2 )
anims/show = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Rooms" type="Node" parent="."]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="state_changed" from="Player" to="." method="_on_Player_state_changed"]
[connection signal="switch_rooms" from="Player" to="." method="_on_Player_switch_rooms"]
